@@ -75,6 +75,9 @@ this repository contains the full copyright notices and license terms. -->
             <field name="domain"
                 eval="['OR', ('quantity', '!=', 0.0), ('forecast_quantity', '!=', 0.0)]"
                 pyson="1"/>
+            <field name="search_value"
+                eval="[('consumable', '=', False)]"
+                pyson="1"/>
             <field name="context_model">stock.products_by_locations.context</field>
         </record>
         <record model="ir.action.act_window.view" id="act_product_form_view2">
