@@ -8,4 +8,5 @@ this repository contains the full copyright notices and license terms. -->
     <field name="forecast_quantity"/>
     <field name="default_uom"/>
     <field name="cost_value" sum="Cost Value"/>
+    <field name="consumable" tree_invisible="1"/>
 </tree>
