@@ -1,3 +1,4 @@
+* Allow consumable product on inventories
 * Let the user select a default warehouse
 * Add method to get default warehouse
 * Improve moves synchronisation on shipments
